--- a/src/styles/rules/element-ui.scss
+++ b/src/styles/rules/element-ui.scss
@@ -12,3 +12,37 @@
     border-bottom-color: #1c1c1c !important;
   }
 }
+
+@include b(table) {
+  background-color: transparent;
+
+  tr {
+    background-color: transparent;
+  }
+
+  th {
+    color: #ffffff;
+    background-color: transparent;
+    opacity: 0.6;
+    font-weight: 400;
+    font-size: 14px;
+  }
+
+  .cell {
+    color: #ffffff;
+    opacity: 0.8;
+    font-weight: 400;
+    font-size: 14px;
+    word-break: normal;
+  }
+
+  @include e(column-filter-trigger) {
+    line-height: normal;
+  }
+
+  @include m(enable-row-hover) {
+    .el-table__body tr:hover > td {
+      background-color: rgba(#000000, 0.15);
+    }
+  }
+}
