add tooltip for fee

--- a/src/styles/rules/element-ui.scss
+++ b/src/styles/rules/element-ui.scss
@@ -8,8 +8,8 @@
 
 @include b(popper) {
   .popper__arrow::after {
-    border-top-color: #1c1c1c !important;
-    border-bottom-color: #1c1c1c !important;
+    border-top-color: #182233 !important;
+    border-bottom-color: #182233 !important;
   }
 }
 
